--- a/Client/Dockerfile
+++ b/Client/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:12
 WORKDIR /app
+ENV CHOKIDAR_USEPOLLING=true
 COPY . /app
 RUN ["yarn", "install"]
-EXPOSE 5432
+EXPOSE 3333
 ENTRYPOINT ["yarn", "start:dev"]
+
