--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "3333:3000"
     environment:
       - REACT_APP_API_URL=http://localhost:3000/
+    stdin_open: true
     depends_on:
       - server
     volumes:
