--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,10 @@
 FROM node:12
 WORKDIR /app
-ENV CHOKIDAR_USEPOLLING=true
-COPY . /app
+# ENV CHOKIDAR_USEPOLLING=true
+COPY package.json /app
+COPY yarn.lock /app
 RUN ["yarn", "install"]
+COPY . /app
 EXPOSE 3333
 ENTRYPOINT ["yarn", "start"]
 
