--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,3 @@
-CLIENT_ORIGIN_URL=
-AUTH0_AUDIENCE=
-AUTH0_ISSUER_URL=
-
+CLIENT_ORIGIN_URL=http://localhost:3333
+AUTH0_AUDIENCE=http://proj3.net
+AUTH0_ISSUER_URL=yodasoda.au.auth0.com
