--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,3 @@
 CLIENT_ORIGIN_URL=http://localhost:3333
 AUTH0_AUDIENCE=http://proj3.net
-AUTH0_ISSUER_URL=yodasoda.au.auth0.com
- 
+AUTH0_ISSUER_URL=https://yodasoda.au.auth0.com/
