--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "jwks-rsa": "^1.10.1",
-    "pg": "^8.4.1"
+    "pg": "^8.4.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
