--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express-jwt": "^6.0.0",
     "jwks-rsa": "^1.10.1",
     "pg": "^8.4.1",
+    "swagger-ui-express": "^4.1.4",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
