--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node -r dotenv/config index.js",
-    "dev": "nodemon -r dotenv/config index.js",
+    "dev": "nodemon -e js,yaml -r dotenv/config index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT",
