--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node -r dotenv/config index.js",
-    "dev": "nodemon -e js,yaml -r dotenv/config index.js",
+    "dev": "nodemon -r dotenv/config index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "MIT",
@@ -14,9 +14,7 @@
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "jwks-rsa": "^1.10.1",
-    "pg": "^8.4.1",
-    "swagger-ui-express": "^4.1.4",
-    "yamljs": "^0.3.0"
+    "pg": "^8.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
