parameterise api url with proxy option

--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "api",
   "version": "1.0.0",
   "main": "index.js",
+  "proxy": "http://server",
   "scripts": {
     "start": "node -r dotenv/config index.js",
     "dev": "nodemon -e js,yaml -r dotenv/config index.js",
