--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "3333:3000"
     environment:
-      - REACT_APP_API_URL=http://localhost:3000/
+      - REACT_APP_API_URL=http://localhost:5123 # consider leaving blank and using proxy
     stdin_open: true
     depends_on:
       - server
