--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:prod": "npm run build && cp -r  build ../server/ui",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
