--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - PGPASSWORD=password
       - PGPORT=5432
       - NODE_ENV=development
-      - EXPRESS_PORT=5000
+      - PORT=5000
     depends_on:
       - db
     volumes:
