--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,7 @@
   "scripts": {
     "start": "node -r dotenv/config index.js",
     "dev": "nodemon -e js,yaml -r dotenv/config index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "engines": {
-    "node": "12.x"
+    "test": "jest"
   },
   "license": "MIT",
   "dependencies": {
@@ -17,10 +14,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "jest": "^26.6.1",
     "jwks-rsa": "^1.10.1",
+    "morgan": "^1.10.0",
     "pg": "^8.4.1",
     "swagger-ui-express": "^4.1.4",
-    "morgan": "^1.10.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
