added dependencies for fetch, env variables and csv parsing

--- a/tools/package.json
+++ b/tools/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
-    "fast-csv": "^4.3.5"
+    "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.1",
+    "papaparse": "^5.3.0"
   }
 }
